<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.winterhaven-mc</groupId>
	<artifactId>death-ban</artifactId>
	<version>1.21.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>SavageDeathBan</name>

	<properties>
		<project.author>Tim Savage</project.author>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
		<bstats.relocatecheck>false</bstats.relocatecheck>
	</properties>

	<licenses>
		<license>
			<name>GNU General Public License v3.0</name>
			<url>https://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/tim-savage/SavageDeathBan/issues</url>
	</issueManagement>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub winterhavenmc Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/winterhavenmc/MessageBuilderLib/</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- Spigot API -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.21.7-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<!-- bStats -->
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>3.1.0</version>
		</dependency>

		<!-- MessageBuilderLib -->
		<dependency>
			<groupId>com.winterhaven-mc</groupId>
			<artifactId>message-builder-lib</artifactId>
			<version>1.21.0-SNAPSHOT</version>
		</dependency>

		<!-- SoundConfigLib -->
		<dependency>
			<groupId>com.winterhaven-mc</groupId>
			<artifactId>sound-config-lib</artifactId>
			<version>1.21.0-SNAPSHOT</version>
		</dependency>

		<!-- WorldManagerLib -->
		<dependency>
			<groupId>com.winterhaven-mc</groupId>
			<artifactId>world-manager-lib</artifactId>
			<version>1.21.0-SNAPSHOT</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.11.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<!-- jar filename -->
		<finalName>${project.name}-${project.version}</finalName>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>ban-bad-log4j-versions</id>
						<phase>validate</phase>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<bannedDependencies>
									<excludes>
										<exclude>org.apache.logging.log4j:log4j-core:(,2.17.0)</exclude>
									</excludes>
								</bannedDependencies>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Compile Java jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
			</plugin>

			<!-- Create Shaded jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>true</minimizeJar>
							<filters>
								<filter>
									<artifact>org.bstats:bstats-*</artifact>
									<excludes>
										<exclude>META-INF/MANIFEST.MF</exclude>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
								<filter>
									<artifact>com.winterhaven-mc:*-lib</artifact>
									<excludes>
										<exclude>META-INF/MANIFEST.MF</exclude>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
							<artifactSet>
								<includes>
									<include>com.winterhaven-mc:message-builder-lib</include>
									<include>com.winterhaven-mc:sound-config-lib</include>
									<include>com.winterhaven-mc:world-manager-lib</include>
									<include>org.bstats</include>
								</includes>
							</artifactSet>
							<relocations>
								<relocation>
									<pattern>com.winterhavenmc.library</pattern>
									<shadedPattern>com.winterhavenmc.savagedeathban.shaded</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.bstats</pattern>
									<shadedPattern>com.winterhavenmc.savagedeathban.shaded</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Plugin for Unit Tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<junitArtifactName>org.junit.jupiter:junit-jupiter</junitArtifactName>
					<trimStackTrace>false</trimStackTrace>
					<systemPropertyVariables>
							<bstats.relocatecheck>false</bstats.relocatecheck>
					</systemPropertyVariables>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
